// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons/<ino-chip> Colors smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <div class="ino-chip-story">
      <ino-chip>
        Default
      </ino-chip>
      <ino-chip color-scheme="primary">
        Primary
      </ino-chip>
      <ino-chip color-scheme="secondary">
        Secondary
      </ino-chip>
      <ino-chip color-scheme="success">
        Success
      </ino-chip>
      <ino-chip color-scheme="warning">
        Warning
      </ino-chip>
      <ino-chip color-scheme="error">
        Error
      </ino-chip>
      <ino-chip color-scheme="light">
        Light
      </ino-chip>
      <ino-chip color-scheme="dark">
        Dark
      </ino-chip>
    </div>
    <div class="ino-chip-story">
      <ino-chip fill="outline">
        Outline
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="primary"
      >
        Primary
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="secondary"
      >
        Secondary
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="success"
      >
        Success
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="warning"
      >
        Warning
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="error"
      >
        Error
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="light"
      >
        Light
      </ino-chip>
      <ino-chip fill="outline"
                color-scheme="dark"
      >
        Dark
      </ino-chip>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-chip> Fill smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <div class="ino-chip-story">
      <ino-chip fill="solid">
        Chip Solid
      </ino-chip>
      <ino-chip fill="outline">
        Chip Outline
      </ino-chip>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-chip> Filter smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <div class="ino-chip-story">
      <ino-chip selectable
                value="Chip 1"
      >
        Chip 1
      </ino-chip>
      <ino-chip selectable
                value="Chip 2"
      >
        Chip 2
      </ino-chip>
      <ino-chip selectable
                value="Chip 3"
      >
        Chip 3
      </ino-chip>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-chip> Icons smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <div class="ino-chip-story">
      <ino-chip>
        Leading
        <ino-icon slot="icon-leading"
                  icon="star"
        >
        </ino-icon>
      </ino-chip>
      <ino-chip>
        Trailing
        <ino-icon slot="icon-trailing"
                  icon="star"
        >
        </ino-icon>
      </ino-chip>
      <ino-chip>
        <span>
          Leading &amp; Trailing
        </span>
        <ino-icon slot="icon-leading"
                  icon="star"
        >
        </ino-icon>
        <ino-icon slot="icon-trailing"
                  icon="star"
        >
        </ino-icon>
      </ino-chip>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-chip> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-chip class="customizable-chip"
              color-scheme="default"
              disabled="false"
              fill="solid"
              removable="false"
              selectable="false"
              selected="false"
              value
    >
      Label
    </ino-chip>
  </div>
</div>
`;

exports[`Buttons/<ino-chip> Remove smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <div class="ino-chip-story">
      <ino-chip value="Chip 1"
                removable="false"
      >
        Chip 1
      </ino-chip>
      <ino-chip value="Chip 2"
                removable="true"
      >
        Chip 2
      </ino-chip>
      <ino-chip value="Chip 3"
                removable="true"
      >
        Chip 3
      </ino-chip>
    </div>
  </div>
</div>
`;

exports[`Buttons/<ino-chip> Selection smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <div id="chip-selection"
         class="ino-chip-story"
    >
      <ino-chip color-scheme="primary"
                value="Chip 1"
      >
        Chip 1
      </ino-chip>
      <ino-chip color-scheme="default"
                value="Chip 2"
      >
        Chip 2
      </ino-chip>
      <ino-chip color-scheme="default"
                value="Chip 3"
      >
        Chip 3
      </ino-chip>
    </div>
  </div>
</div>
`;
